--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ h6,
     }
 
 .bg-offer {
-    background: linear-gradient(rgba(18, 15, 45, .5), rgba(18, 15, 45, .5)), url(../img/carousel-2.jpg) top right no-repeat;
+    background: linear-gradient(rgba(18, 15, 45, .5), rgba(18, 15, 45, .5)), url(../img/security.jpg) top right no-repeat;
     background-size: cover;
 }
 
